--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- Header Area End -->
         
         <!-- Banner Area Start -->
-        <div id="banner" data-parallax-bg-img="img/banner-img/bg.jpg" data-position-y="0px">
+        <div id="banner" data-parallax-bg-img="img/banner.jpg" data-position-y="0px">
             <div class="container">
                 <div class="vc--parent">
                 	<div class="vc--child">
